--- a/BloQuery/BloQuery/Base.lproj/Main.storyboard
+++ b/BloQuery/BloQuery/Base.lproj/Main.storyboard
@@ -102,10 +102,10 @@
             </objects>
             <point key="canvasLocation" x="1591" y="396"/>
         </scene>
-        <!--User Profile View Controller-->
+        <!--Item-->
         <scene sceneID="b10-dj-vRc">
             <objects>
-                <viewController storyboardIdentifier="profileView" id="8cT-jZ-RCh" customClass="UserProfileViewController" sceneMemberID="viewController">
+                <viewController id="8cT-jZ-RCh" customClass="UserProfileViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="4rj-bm-wd6"/>
                         <viewControllerLayoutGuide type="bottom" id="z97-lg-XPQ"/>
@@ -162,9 +162,16 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="q4L-nt-vIO" firstAttribute="top" secondItem="4rj-bm-wd6" secondAttribute="bottom" constant="20" id="Uam-Tg-mhh"/>
+                            <constraint firstItem="q4L-nt-vIO" firstAttribute="top" secondItem="4rj-bm-wd6" secondAttribute="bottom" constant="20" id="jBI-pw-pNa"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" badgeValue="1" selectedImage="faceIcon" id="aTM-6r-DBp"/>
+                    <toolbarItems>
+                        <barButtonItem title="Logout" width="100" id="inS-hr-4kk">
+                            <inset key="imageInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </barButtonItem>
+                    </toolbarItems>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="profilePhoto" destination="fa1-LH-89o" id="2u3-Nf-26b"/>
                         <outlet property="userDescription" destination="2PY-y7-hlP" id="9kr-Ko-COV"/>
@@ -173,7 +180,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XLq-6e-HmA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2363" y="-333"/>
+            <point key="canvasLocation" x="3157" y="-333"/>
         </scene>
         <!--Image Library View Controller-->
         <scene sceneID="gq6-pf-yhm">
@@ -228,7 +235,14 @@
                                     <rect key="frame" x="0.0" y="0.0" width="533" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="szK-ud-CTx">
+                                        <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ga5-n9-lg9">
+                                            <rect key="frame" x="13" y="30" width="45" height="40"/>
+                                            <state key="normal" title="Button" image="bloProfile"/>
+                                            <connections>
+                                                <action selector="didTapProfilePhoto:" destination="sru-MH-sNP" eventType="touchUpInside" id="WRF-mh-yzH"/>
+                                            </connections>
+                                        </button>
+                                        <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="szK-ud-CTx">
                                             <rect key="frame" x="66" y="3" width="400" height="94"/>
                                             <attributedString key="attributedText">
                                                 <fragment content="This is where all the questions are going to go. Is this the first Question?">
@@ -240,21 +254,22 @@
                                             </attributedString>
                                             <color key="highlightedColor" red="0.9888055788590604" green="0.0" blue="0.9329383389261745" alpha="1" colorSpace="calibratedRGB"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" tag="200" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="7CR-Ft-gSZ">
-                                            <rect key="frame" x="13" y="30" width="40" height="40"/>
-                                        </imageView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="7CR-Ft-gSZ" firstAttribute="leading" secondItem="MdR-ZN-QYi" secondAttribute="leadingMargin" constant="5" id="GQY-2v-rPo"/>
-                                        <constraint firstItem="szK-ud-CTx" firstAttribute="leading" secondItem="7CR-Ft-gSZ" secondAttribute="trailing" constant="13" id="gfW-LP-2IX"/>
-                                        <constraint firstAttribute="trailing" secondItem="szK-ud-CTx" secondAttribute="trailing" id="z9f-9q-E5i"/>
+                                        <constraint firstItem="Ga5-n9-lg9" firstAttribute="centerY" secondItem="szK-ud-CTx" secondAttribute="centerY" id="Ffr-bI-Scb"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="szK-ud-CTx" secondAttribute="trailing" constant="59" id="KbU-ed-vrq"/>
+                                        <constraint firstItem="szK-ud-CTx" firstAttribute="top" secondItem="MdR-ZN-QYi" secondAttribute="topMargin" constant="-5" id="Kkz-2g-0Dl"/>
+                                        <constraint firstItem="szK-ud-CTx" firstAttribute="centerX" secondItem="MdR-ZN-QYi" secondAttribute="centerX" id="VjR-83-aRJ"/>
+                                        <constraint firstItem="Ga5-n9-lg9" firstAttribute="leading" secondItem="MdR-ZN-QYi" secondAttribute="leadingMargin" constant="5" id="Xrd-Mz-RUO"/>
+                                        <constraint firstItem="szK-ud-CTx" firstAttribute="leading" secondItem="Ga5-n9-lg9" secondAttribute="trailing" constant="8" symbolic="YES" id="gIB-hs-Yaf"/>
+                                        <constraint firstItem="Ga5-n9-lg9" firstAttribute="top" secondItem="MdR-ZN-QYi" secondAttribute="topMargin" constant="22" id="spL-tJ-uhv"/>
+                                        <constraint firstItem="Ga5-n9-lg9" firstAttribute="centerY" secondItem="MdR-ZN-QYi" secondAttribute="centerY" id="vgQ-mJ-MVi"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <inset key="separatorInset" minX="15" minY="0.0" maxX="15" maxY="0.0"/>
                                 <connections>
                                     <outlet property="questionTextView" destination="szK-ud-CTx" id="sR4-zH-ADi"/>
                                     <segue destination="VfX-TX-JCP" kind="show" identifier="composeAnswer" trigger="accessoryAction" id="gdp-9f-r7n"/>
-                                    <segue destination="szr-wM-iIo" kind="show" identifier="showAnswers" id="VUc-dl-FQG"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -264,6 +279,12 @@
                             <outlet property="delegate" destination="sru-MH-sNP" id="cjN-0j-dBE"/>
                         </connections>
                     </tableView>
+                    <toolbarItems>
+                        <barButtonItem tag="1" title="Item" id="hQm-v1-S9U">
+                            <color key="tintColor" red="0.98880557889999998" green="0.0" blue="0.9329383389" alpha="1" colorSpace="calibratedRGB"/>
+                        </barButtonItem>
+                    </toolbarItems>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KwV-9j-j5D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -279,7 +300,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="answerCell" id="paj-ta-3IH" customClass="AnswersTableViewCell">
-                                <rect key="frame" x="0.0" y="92" width="600" height="100"/>
+                                <rect key="frame" x="0.0" y="28" width="600" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="paj-ta-3IH" id="iTc-vT-XlP">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="100"/>
@@ -315,10 +336,79 @@
                             <outlet property="delegate" destination="szr-wM-iIo" id="sMP-6Q-0I6"/>
                         </connections>
                     </tableView>
+                    <toolbarItems>
+                        <barButtonItem systemItem="camera" id="kH9-6i-5eN"/>
+                    </toolbarItems>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tyM-Id-IKi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3064" y="396"/>
+        </scene>
+        <!--View Profile View Controller-->
+        <scene sceneID="dU3-eS-Lpo">
+            <objects>
+                <viewController storyboardIdentifier="ViewProfileViewController" title="View Profile View Controller" id="qSk-Ll-WwG" customClass="UserProfileViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="WyP-Ck-VQY"/>
+                        <viewControllerLayoutGuide type="bottom" id="uQ1-yH-9IK"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="gj6-HY-9Hl">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9U6-n5-5uB">
+                                <rect key="frame" x="20" y="77" width="560" height="103"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="7vr-Dt-ykB">
+                                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XeI-VI-XvO">
+                                        <rect key="frame" x="0.0" y="68" width="94" height="30"/>
+                                        <state key="normal" title="Upload Photo"/>
+                                        <connections>
+                                            <action selector="didTapPhotoUpload:" destination="8cT-jZ-RCh" eventType="touchUpInside" id="qye-SR-cOq"/>
+                                        </connections>
+                                    </button>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Enter a Screen name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7ss-cQ-XJI">
+                                        <rect key="frame" x="75" y="8" width="200" height="30"/>
+                                        <attributedString key="attributedText"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="m0e-fv-zmd">
+                                <rect key="frame" x="41" y="217" width="320" height="257"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S81-t0-Q9o">
+                                        <rect key="frame" x="0.0" y="8" width="133" height="21"/>
+                                        <attributedString key="attributedText">
+                                            <fragment content="Description">
+                                                <attributes>
+                                                    <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <font key="NSFont" size="20" name="Futura-Medium"/>
+                                                </attributes>
+                                            </fragment>
+                                        </attributedString>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" layoutMarginsFollowReadableWidth="YES" keyboardDismissMode="interactive" text="Tell us a bit about yourself and press Enter" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="qah-xG-wU6">
+                                        <rect key="frame" x="0.0" y="37" width="290" height="128"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences" enablesReturnKeyAutomatically="YES"/>
+                                    </textView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Jba-Pa-Lga"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DJy-oZ-9Se" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3064" y="1216"/>
         </scene>
         <!--Answer the Question-->
         <scene sceneID="iYL-tr-Cur">
@@ -396,7 +486,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ebj-Pc-kvy" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="4Dl-Xp-urT" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2302" y="1149"/>
+            <point key="canvasLocation" x="2370" y="1223"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="vnp-Nn-sYA">
@@ -418,6 +508,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="bloProfile" width="794" height="932"/>
+        <image name="faceIcon" width="50" height="50"/>
         <image name="profile" width="25" height="25"/>
     </resources>
 </document>
