--- a/BloQuery/BloQuery/Base.lproj/Main.storyboard
+++ b/BloQuery/BloQuery/Base.lproj/Main.storyboard
@@ -130,11 +130,26 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" layoutMarginsFollowReadableWidth="YES" keyboardDismissMode="interactive" text="Tell us a bit about yourself and press Enter" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="2PY-y7-hlP">
-                                        <rect key="frame" x="0.0" y="37" width="290" height="128"/>
+                                        <rect key="frame" x="0.0" y="37" width="290" height="110"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences" enablesReturnKeyAutomatically="YES"/>
                                     </textView>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gRD-of-vo0">
+                                        <rect key="frame" x="0.0" y="164" width="54" height="50"/>
+                                        <state key="normal">
+                                            <attributedString key="attributedTitle">
+                                                <fragment content="Logout">
+                                                    <attributes>
+                                                        <font key="NSFont" size="13" name="Futura-Medium"/>
+                                                    </attributes>
+                                                </fragment>
+                                            </attributedString>
+                                        </state>
+                                        <connections>
+                                            <action selector="LogoutUser:" destination="8cT-jZ-RCh" eventType="touchUpInside" id="bUA-ce-nGI"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
